--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
@@ -20,6 +21,7 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^3.2.0",
     "styled-components": "^6.1.15",
     "web-vitals": "^2.1.4"
   },
