--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://chinesewomendiaspora.github.io",
+  "homepage": "https://chinesewomendiaspora.github.io/",
   "eslintConfig": {
     "extends": [
       "react-app",
